fix the margin spacing of the main card to header

--- a/src/pages/Warehouses/Warehouses.scss
+++ b/src/pages/Warehouses/Warehouses.scss
@@ -6,7 +6,7 @@
 
 .main {
     padding: 1rem;
-    margin-top: -4rem;
+    margin-top: -4.75rem;
 
     @include tablet {
         padding: 2rem;
